headers margin collapse fix

--- a/styles/theme.css
+++ b/styles/theme.css
@@ -327,6 +327,7 @@ h4,
 h5,
 h6 {
     position: relative;
+    display: inline-block;
     margin: 16px 0;
     color: var(--text_high_emp);
 }
@@ -352,6 +353,14 @@ div h2:first-of-type{
 }
 
 p + h2{
+    margin-top: 64px;
+}
+
+ol + h2{
+    margin-top: 64px;
+}
+
+ul + h2{
     margin-top: 64px;
 }
 
